--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "ansi-html": "0.0.7",
+    "babel-plugin-component": "^1.1.1",
     "cropperjs": "^1.5.5",
     "css-declaration-sorter": "^4.0.1",
     "css-select-base-adapter": "^0.1.1",
